# Software-Testing

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  pytest_example.py  requirements.txt  test_report.md
src/software_testing/: crew.py  main.py
src/software_testing/config/: agents.yaml  tasks.yaml
src/software_testing/tools/: custom_tool.py  pytest_tool.py
